--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,13 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "main.py",
+            "type": "python",
+            "request": "launch",
             "program": "/root/plain-deauther/main.py",
             "console": "integratedTerminal"
         }
