--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ __pycache__/settings.cpython-38.pyc
 modules/__pycache__/decorator.cpython-38.pyc
 modules/__pycache__/manager.cpython-38.pyc
 modules/__pycache__/menu_helper.cpython-38.pyc
+.vscode/.ropeproject/objectdb
+modules/__pycache__/decorator.cpython-38.pyc
+modules/__pycache__/interface.cpython-38.pyc
+modules/__pycache__/manager.cpython-38.pyc
+modules/__pycache__/menu_helper.cpython-38.pyc
